# voicenoteapp

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md
.github/workflows/: ffmpeg-compliance.yml  ffmpeg-lgpl.yml
scripts/ffmpeg/: build_macos_lgpl.sh  verify_compliance.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/resources/ffmpeg/lib/: libavdevice.60.3.100.dylib  libavfilter.9.12.100.dylib  libavformat.60.16.100.dylib  libswscale.7.5.100.dylib
ui/src-tauri/src/: commands.rs  main.rs
ui/src-tauri/src/commands/: tests.rs
ui/src/api/: client.ts  types.ts
ui/src/components/: DropOverlay.tsx  Dropzone.tsx  JobTable.tsx  LogViewer.tsx  MarkdownPreview.tsx  SummaryViewer.tsx  TranscriptViewer.tsx
ui/src/components/console/: ConsoleOverlay.tsx  ConsolePanel.tsx  useAutoScroll.ts
ui/src/components/jobs/: JobRow.tsx  JobsList.tsx  SummaryPanel.tsx  TranscriptPanel.tsx  statusLabels.ts
ui/src/components/player/: ClipPlayer.tsx
ui/src/components/shell/: AppShell.tsx  GlobalDropOverlay.tsx
ui/src/components/tabs/: Tabs.tsx
ui/src/components/transcript/: SegmentList.tsx
ui/src/components/ui/: Button.tsx  Card.tsx  Pill.tsx  ProgressBar.tsx  SplitPane.tsx
ui/src/i18n/: I18nProvider.tsx  strings.ts
ui/src/pages/: JobDetails.tsx  Jobs.tsx  Settings.tsx  Transcribe.tsx  Wizard.tsx
ui/src/styles/: tokens.css
