[package]
name = "plaud-stt-obsidian"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.3.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
zip = "2.2.1"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[profile.release]
strip = true
